build_error.txt
cargo :     Checking 
authz-core v0.1.0 (C:
\Users\Loritamus\Desk
top\Rust project)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -FilePath 
.\build_error.txt 
-Encoding utf ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking au...p\Rus    
t project):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
error[E0106]: 
missing lifetime 
specifier
   --> src\condition.
rs:142:73
    |
142 | fn lookup_attr<
'a>(context: 
&[(&str, 
Value<'a>)], name: 
&str) -> 
Option<&Value<'a>> {
    |                
             
-------------------- 
       ----          
  ^ expected named 
lifetime parameter
    |
    = help: this 
function's return 
type contains a 
borrowed value, but 
the signature does 
not say whether it 
is borrowed from one 
of `context`'s 3 
lifetimes or `name`
help: consider using 
the `'a` lifetime
    |
142 | fn lookup_attr<
'a>(context: 
&[(&str, 
Value<'a>)], name: 
&str) -> Option<&'a 
Value<'a>> {
    |                
                     
                     
                ++

For more information 
about this error, 
try `rustc --explain 
E0106`.
error: could not 
compile `authz-core` 
(lib) due to 1 
previous error
